# Model_XVLM_Training

./: .gitignore  Makefile  README.md  analyze.md  pyproject.toml  requirements-xvlm.txt  requirements.txt
configs/: star_v3_100k.yaml  star_v3_10k_kaggle.yaml  star_v3_pe200k_xvlm.yaml  star_v3_pe30k_xvlm.yaml
notebooks/: aicity_vlm_rerank.ipynb  kaggle_eval_oldtest.ipynb  kaggle_eval_v5_compare.ipynb  kaggle_train_10k.ipynb  kaggle_train_10k_v2.ipynb  kaggle_train_10k_v3.ipynb  kaggle_train_infer_v4.ipynb  kaggle_train_v3c_50k.ipynb  kaggle_train_v6.ipynb
reports/: instruct_inference.md  run_2026-06-12_10k_hard_t4.md  run_2026-06-12_v2_experiments_t4.md
scripts/: build_candidate_ensemble.py  build_pe_query_bank.py  calibrate_xvlm_batch.py  evaluate.py  export_for_inference.py  extract_pe_features.py  extract_pose_yolo.py  kaggle_setup.py  pose_rerank.py  precompute_pe_text.py  qwen_rerank.py  run_inference.py  sweep_cached_rerank.py  train.py  train_pairwise.py  train_pe.py  vitpose_extract.py
src/star/: __init__.py  config.py  metrics.py
src/star/data/: __init__.py  dataset.py  sampler.py  transforms.py
src/star/engine/: __init__.py  evaluator.py  optim.py  trainer.py
src/star/losses/: itc.py  (+4 more)
tests/: conftest.py  test_cached_sweep.py  test_config.py  test_eval.py  test_hard_neg.py  test_inference.py  test_losses.py  test_metrics.py  test_model_smoke.py  test_pair_sampler.py  test_pe_xbm.py  test_pose_extract.py  test_pose_rerank.py  test_pose_rerank_e2e.py  test_qwen_rerank.py  test_resume.py  test_transforms.py  test_vitpose_extract.py  test_weighting.py
(+18 files in other folders)
